--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Identity/Pages/Account/Register.cshtml
@@ -52,7 +52,7 @@
     </div>
     <div class="col-md-6 col-md-offset-2">
         <section>
-            <h4>Use another service to register.</h4>
+            <h4 class="m-2">Use another service to register.</h4>
             <hr />
             @{
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
