--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Categories/All.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Categories/All.cshtml
@@ -1,17 +1,19 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model List<ASP.NET_MVC_Forum.Models.Category.AllCategoryViewModel>;
+
+@{
+    ViewData["Title"] = "All categories";
 }
 
-<div class="row justify-content-center">
+    <div class="row justify-content-center">
 
-    @foreach (var category in ViewBag.Categories)
-    {
-        <div class="card col-auto justify-content-center m-1" style="width: 10rem;">
-            <a href="#">
-                <img class="card-img-top w-100 h-100" src="@category.ImageUrl" alt="Card image cap">
-            </a>
-            <h5 class="card-footer text-center">@category.Name</h5>
-        </div>
-    }
+        @foreach (var category in Model)
+        {
+            <div class="card col-auto justify-content-center m-1" style="width: 10rem;">
+                <a asp-controller="Categories" asp-action="CategoryContent" asp-route-categoryId="@category.Id" asp-route-categoryName="@category.Name">
+                    <img class="card-img-top w-100 h-100" src="@category.ImageUrl" alt="Card image cap">
+                </a>
+                <h6 class="card-footer text-center">@category.Name</h6>
+            </div>
+        }
 
-</div>
+    </div>
