--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Categories/All.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Categories/All.cshtml
@@ -4,16 +4,40 @@
     ViewData["Title"] = "All categories";
 }
 
+<div class="flex-row justify-content-center flex-grow-1">
+    <br />
     <div class="row justify-content-center">
-
-        @foreach (var category in Model)
-        {
-            <div class="card col-auto justify-content-center m-1" style="width: 10rem;">
-                <a asp-controller="Categories" asp-action="CategoryContent" asp-route-categoryId="@category.Id" asp-route-categoryName="@category.Name">
-                    <img class="card-img-top w-100 h-100" src="@category.ImageUrl" alt="Card image cap">
-                </a>
-                <h6 class="card-footer text-center">@category.Name</h6>
-            </div>
-        }
-
+        <div class="col-12 col-md-10 col-lg-8">
+            <form asp-controller="Categories" asp-action="All">
+                <div class="card-body row no-gutters align-items-center">
+                    <div class="col-auto">
+                        <i class="fas fa-search h4 text-body"></i>
+                    </div>
+                    <div class="col">
+                        <input class="form-control form-control-lg form-control-borderless" name ="searchTerm" type="search" placeholder="Categories..." value="">
+                    </div>
+                    <div class="col-auto">
+                        <button class="btn btn-lg btn-success ml-1" type="submit">Search</button>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
+</div>
+
+
+
+
+<div class="row justify-content-center">
+
+    @foreach (var category in Model)
+    {
+        <div class="card col-auto justify-content-center m-1" style="width: 10rem;">
+            <a asp-controller="Categories" asp-action="CategoryContent" asp-route-categoryId="@category.Id" asp-route-categoryName="@category.Name">
+                <img class="card-img-top w-100 h-100" src="@category.ImageUrl" alt="Card image cap">
+            </a>
+            <h6 class="card-footer text-center">@category.Name</h6>
+        </div>
+    }
+
+</div>
