--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Categories/CategoryContent.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Categories/CategoryContent.cshtml
@@ -1,29 +1,24 @@
-﻿<div class="container-fluid mt-100">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="card mb-4">
-                <div class="card-header">
-                    <div class="media flex-wrap w-100 align-items-center">
-                        <img src="https://i.imgur.com/iNmBizf.jpg" class="d-block ui-w-40 rounded-circle" alt="">
-                        <div class="media-body ml-3">
-                            <a href="javascript:void(0)" data-abc="true">Tom Harry</a>
-                            <div class="text-muted small">13 days ago</div>
-                        </div>
-                        <div class="text-muted small ml-3">
-                            <div>Member since <strong>01/1/2019</strong></div>
-                            <div><strong>134</strong> posts</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-body">
-                    <p> For me, getting my business website made was a lot of tech wizardry things. Thankfully i get an ad on Facebook ragarding commence website. I get connected with BBB team. They made my stunning website live in just 3 days. With the increase demand of online customers. I had to take my business online. BBB Team guided me at each step and enabled me to centralise my work and have control on all aspect of my online business. </p>
-                    <p> For me, getting my business website made was a lot of tech wizardry things. Thankfully i get an ad on Facebook ragarding commence website. I get connected with BBB team. They made my stunning website live in just 3 days. With the increase demand of online customers. I had to take my business online. BBB Team guided me at each step and enabled me to centralise my work and have control on all aspect of my online business. </p>
-                </div>
-                <div class="card-footer d-flex flex-wrap justify-content-between align-items-center px-0 pt-0 pb-3">
-                    <div class="px-4 pt-3"> <a href="javascript:void(0)" class="text-muted d-inline-flex align-items-center align-middle" data-abc="true"> <i class="fa fa-heart text-danger"></i>&nbsp; <span class="align-middle">445</span> </a> <span class="text-muted d-inline-flex align-items-center align-middle ml-4"> <i class="fa fa-eye text-muted fsize-3"></i>&nbsp; <span class="align-middle">14532</span> </span> </div>
-                    <div class="px-4 pt-3"> <button type="button" class="btn btn-primary"><i class="ion ion-md-create"></i>&nbsp; Reply</button> </div>
-                </div>
-            </div>
+﻿@{
+    ViewData["Title"] = "Posts";
+}
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
+
+
+
+<div class="card-body p-2 p-sm-3">
+    <div class="media forum-item">
+        <a href="#" data-toggle="collapse" data-target=".forum-content" aria-expanded="false" class="collapsed"><img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="mr-3 rounded-circle" width="50" alt="User"></a>
+        <div class="media-body">
+            <h6><a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body collapsed" aria-expanded="false">Realtime fetching data</a></h6>
+            <p class="text-secondary">
+                lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet
+            </p>
+            <p class="text-muted"><a href="javascript:void(0)">drewdan</a> replied <span class="text-secondary font-weight-bold">13 minutes ago</span></p>
+        </div>
+        <div class="text-muted small text-center align-self-center">
+            <span><i class="far fa-comment ml-2"></i> 3</span>
         </div>
     </div>
 </div>
+<hr />
