--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/Add.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/Add.cshtml
@@ -1,22 +1,31 @@
-﻿@{
+﻿@model ASP.NET_MVC_Forum.Models.Post.AddPostFormModel;
+
+@{
     ViewData["Title"] = "Add";
 }
 
+@using ASP.NET_MVC_Forum.Infrastructure.Extensions;
+
+
+<link rel="stylesheet" type="text/css" href="prism.css">
+
 <div class="container">
-    <form>
+    <form method="post" asp-controller="Posts" asp-action="Add" formaction="SavePost">
         <div class="form-row">
             <div class="col-7">
-                <input type="text" class="form-control" placeholder="Title">
+                <input type="text" class="form-control" asp-for="Title" placeholder="Title">
             </div>
             <div class="col">
-                <select id="inputState" class="form-control">
-                    <option selected>Category</option>
-                    <option>...</option>
+                <select asp-for="CategoryId" class="form-control">
+                    @foreach (var category in Model.Categories)
+                    {
+                        <option value="@category.Id">@category.Name</option>
+                    }
                 </select>
             </div>
         </div>
         <div class="mt-3 mb-3">
-            <textarea id="mytextarea" name="mytextarea">Hello, World!</textarea>
+            <textarea id="mytextarea" asp-for="HtmlContent" placeholder="Once upon a time..."></textarea>
         </div>
         <div class="text-center mt-3">
             <button type="submit" class="btn btn-primary">Submit</button>
@@ -29,9 +38,26 @@
 
 <script>
     tinymce.init({
-        selector: '#mytextarea'
+        selector: '#mytextarea',
+        menubar: 'view edit',
+        plugins: 'emoticons paste autosave preview fullscreen codesample code autolink',
+        toolbar: 'emoticons paste restoredraft preview fullscreen codesample undo redo styleselect bold italic alignleft aligncenter alignright alignjustify outdent indent',
+        paste_data_images: true,
+        smart_paste: true,
+        min_height: 500,
+        codesample_languages: [
+            { text: 'HTML/XML', value: 'markup' },
+            { text: 'JavaScript', value: 'javascript' },
+            { text: 'CSS', value: 'css' },
+            { text: 'C#', value: 'csharp' },
+        ],
+        content_style: 'body { font-family:Helvetica,Arial,sans-serif; font-size:14px }'
     });
 </script>
+
+
+<script src="prism.js"></script>
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
