--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Home/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Home/Index.cshtml
@@ -1,5 +1,12 @@
-﻿<link rel="stylesheet" href="~/css/postsAll.css" />
+﻿@model ASP.NET_MVC_Forum.Models.Post.PostViewModel[];
 
+<link rel="stylesheet" href="~/css/postsAll.css" />
+
+
+
+
+@foreach (var item in Model)
+{
 <div class="container-fluid mt-100">
     <div class="row">
         <div class="col-md-12">
@@ -18,7 +25,7 @@
                     </div>
                 </div>
                 <div class="card-body">
-                    <p> For me, getting my business website made was a lot of tech wizardry things. Thankfully i get an ad on Facebook ragarding commence website. I get connected with BBB team. </p>
+                    @Html.Raw(@item.HtmlContent)
                 </div>
                 <div class="card-footer d-flex flex-wrap justify-content-between align-items-center px-0 pt-0 pb-3">
                     <div class="px-4 pt-3"> <a href="javascript:void(0)" class="text-muted d-inline-flex align-items-center align-middle" data-abc="true"> <i class="fa fa-heart text-danger"></i>&nbsp; <span class="align-middle">445</span> </a> <span class="text-muted d-inline-flex align-items-center align-middle ml-4"> <i class="fa fa-eye text-muted fsize-3"></i>&nbsp; <span class="align-middle">14532</span> </span> </div>
@@ -29,4 +36,4 @@
             </div>
         </div>
     </div>
-</div>
+</div>}
