--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Home/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Home/Index.cshtml
@@ -1,14 +1,7 @@
-﻿@model ASP.NET_MVC_Forum.Models.Post.PostPreviewViewModel[];
+﻿@model List<ASP.NET_MVC_Forum.Models.Post.PostPreviewViewModel>;
 @using System.Text.RegularExpressions;
 
 <link rel="stylesheet" href="~/css/postsAll.css" />
-
-@{ 
-
-    var pattern = @"<.*?>";
-    var replacement = string.Empty;
-}
-
 
 @foreach (var item in Model)
 {
@@ -30,7 +23,7 @@
                     </div>
                 </div>
                 <div class="card-body">
-                    @Regex.Replace(@Html.Raw(item.ShortDescription).ToString(),pattern,replacement).Substring(0,200)...
+                    @Html.Raw(item.ShortDescription)
                 </div>
                 <div class="card-footer d-flex flex-wrap justify-content-between align-items-center px-0 pt-0 pb-3">
                     <div class="px-4 pt-3"> <a href="javascript:void(0)" class="text-muted d-inline-flex align-items-center align-middle" data-abc="true"> <i class="fa fa-heart text-danger"></i>&nbsp; <span class="align-middle">445</span> </a> <span class="text-muted d-inline-flex align-items-center align-middle ml-4"> <i class="fa fa-eye text-muted fsize-3"></i>&nbsp; <span class="align-middle">14532</span> </span> </div>
