implemented the showing of real user metadata on post short description card added default user image

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Home/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Home/Index.cshtml
@@ -4,33 +4,41 @@
 
 @foreach (var item in Model)
 {
-<div class="container-fluid mt-100">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="card mb-4">
-                <div class="card-header">
-                    <div class="media flex-wrap w-100 align-items-center">
-                        <img src="https://i.imgur.com/iNmBizf.jpg" class="d-block ui-w-40 rounded-circle" alt="">
-                        <div class="media-body ml-3">
-                            <a href="javascript:void(0)" data-abc="true">Tom Harry</a>
-                            <div class="text-muted small">13 days ago</div>
+    <div class="container-fluid mt-100">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card mb-4">
+                    <div class="card-footer d-flex flex-wrap justify-content-between align-items-center px-0 pt-0 pb-3">
+                        <div class="px-4 pt-3">
+                            <h5 class="text-dark font-weight-bold">@item.Title</h5>
                         </div>
-                        <div class="text-muted small ml-3">
-                            <div>Member since <strong>01/1/2019</strong></div>
-                            <div><strong>134</strong> posts</div>
+                        <div class="px-4 pt-3 text-center">
+                            <button type="button" class="btn btn-primary"><i class="ion ion-md-create"></i>Read More</button>
                         </div>
                     </div>
-                </div>
-                <div class="card-body">
-                    @Html.Raw(item.ShortDescription)
-                </div>
-                <div class="card-footer d-flex flex-wrap justify-content-between align-items-center px-0 pt-0 pb-3">
-                    <div class="px-4 pt-3"> <a href="javascript:void(0)" class="text-muted d-inline-flex align-items-center align-middle" data-abc="true"> <i class="fa fa-heart text-danger"></i>&nbsp; <span class="align-middle">445</span> </a> <span class="text-muted d-inline-flex align-items-center align-middle ml-4"> <i class="fa fa-eye text-muted fsize-3"></i>&nbsp; <span class="align-middle">14532</span> </span> </div>
-                    <div class="px-4 pt-3">
-                        <button type="button" class="btn btn-primary"><i class="ion ion-md-create"></i>Read more</button>
+                    <div class="card-body">
+                        @Html.Raw(item.ShortDescription)
+                    </div>
+
+                    <div class="card-header">
+                        <div class="media flex-wrap w-100 align-items-center">
+                            <img src="~/img/defaultUserImage.png" class="d-block ui-w-40 rounded-circle" alt="">
+                            
+                            <div class="media-body ml-3">
+                                <a href="javascript:void(0)" data-abc="true">@item.Username</a>
+                                <div class="text-muted small">@item.PostCreationDate</div>
+                            </div>
+                            <div class="text-muted small ml-3">
+                                <div>Member since <strong>@item.MemberSince</strong></div>
+                                <div><strong>@item.PostsCount</strong> posts</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>}
+}
+
+
+
