--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Identity/Pages/Account/Register.cshtml
@@ -44,7 +44,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Input.Age"></label>
-                <input asp-for="Input.Age" class="form-control" />
+                <input type="number"min="0" oninput="validity.valid||(value='')" asp-for="Input.Age" class="form-control" />
                 <span asp-validation-for="Input.Age" class="text-danger"></span>
             </div>
             <button type="submit" class="btn btn-primary">Register</button>
