--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Home/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
                             <h5 class="text-dark font-weight-bold">@item.Title</h5>
                         </div>
                         <div class="px-4 pt-3 text-center">
-                            <button type="button" class="btn btn-primary"><i class="ion ion-md-create"></i>Read More</button>
+                            <button type="button" class="btn btn-primary float-sm-right"><i class="ion ion-md-create"></i>Read More</button>
                         </div>
                     </div>
                     <div class="card-body">
