--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Home/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Home/Index.cshtml
@@ -1,45 +1,1 @@
-﻿@model List<ASP.NET_MVC_Forum.Models.Post.PostPreviewViewModel>;
-
-<link rel="stylesheet" href="~/css/postsAll.css" />
-
-@foreach (var item in Model)
-{
-    <div class="container-fluid mt-100">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card mb-3 mt-3">
-                    <div class="card-footer d-flex flex-wrap justify-content-between align-items-center px-0 pt-0 pb-3">
-                        <div class="px-4 pt-3">
-                            <h5 class="text-dark font-weight-bold">@item.Title</h5>
-                        </div>
-                        <div class="px-4 pt-3 text-center">
-                            <a type="button"  asp-action="ViewPost" asp-controller="Posts" asp-route-postId="@item.PostId" class="btn btn-primary float-sm-right"><i class="ion ion-md-create"></i>Read More</a>
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        @Html.Raw(item.ShortDescription)
-                    </div>
-
-                    <div class="card-header">
-                        <div class="media flex-wrap w-100 align-items-center">
-                            <img src="~/img/defaultUserImage.png" class="d-block ui-w-40 rounded-circle" alt="">
-                            
-                            <div class="media-body ml-3">
-                                <a href="javascript:void(0)" data-abc="true">@item.UserUsername</a>
-                                <div class="text-muted small">@item.PostCreationDate</div>
-                            </div>
-                            <div class="text-muted small ml-3">
-                                <div>Member since <strong>@item.UserMemberSince</strong></div>
-                                <div><strong>@item.UserPostsCount</strong> posts</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <hr style="width:93%" />
-}
-
-
-
+﻿@await Html.PartialAsync("../Shared/_PostsPreviewPartial.cshtml")
