--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/Add.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/Add.cshtml
@@ -8,9 +8,19 @@
 <div class="container">
     <form method="post" asp-controller="Posts" asp-action="Add" formaction="SavePost">
         <div class="form-row">
-            <div class="col-7">
-                <input type="text" class="form-control" asp-for="Title" placeholder="Title">
-            </div>
+            @if (TempData.ContainsKey("Title"))
+            {
+                <div class="col-7">
+                    <input type="text" class="form-control" asp-for="Title" placeholder="Title" value="@TempData["Title"]">
+                </div>
+            }
+            else
+            {
+                <div class="col-7">
+                    <input type="text" class="form-control" asp-for="Title" placeholder="Title">
+                </div>
+            }
+
             <div class="col">
                 <select asp-for="CategoryId" class="form-control">
                     @foreach (var category in Model.Categories)
