--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_LoginPartial.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_LoginPartial.cshtml
@@ -7,6 +7,9 @@
     @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
+            <a class="nav-link text-dark nav pull-right" asp-controller="Posts" asp-action="MyPosts">My Posts</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link text-dark nav pull-right" asp-controller="Posts" asp-action="Add">Add post</a>
         </li>
         <li class="nav-item">
