--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_LoginPartial.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
     @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
-            <a class="nav-link text-dark nav pull-right" asp-controller="Posts" asp-action="MyPosts">My Posts</a>
+            <a class="nav-link text-dark nav pull-right" asp-controller="Users" asp-action="UsersPosts">My Posts</a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-dark nav pull-right" asp-controller="Posts" asp-action="Add">Add post</a>
