--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
@@ -8,12 +8,12 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="card mb-4 mt-4">
-                    <div class="card-footer d-flex flex-wrap justify-content-between align-items-center px-0 pt-0 pb-3">
-                        <div class="px-4 pt-3">
-                            <h5 class="text-dark font-weight-bold">@item.Title</h5>
+                    <div class="card-footer d-flex justify-content-between align-items-center px-0 pt-0 pb-3">
+                        <div class="px-2 pt-3">
+                            <h5 class="text-dark font-weight-bold float-left">@item.Title</h5>
                         </div>
-                        <div class="px-4 pt-3 text-center">
-                            <a type="button"  asp-action="ViewPost" asp-controller="Posts" asp-route-postId="@item.PostId" asp-route-postTitle="@item.Title" class="btn btn-primary float-sm-right"><i class="ion ion-md-create"></i>Read More</a>
+                        <div class="pt-3 text-center float-right position-sticky">
+                            <a type="button"  asp-action="ViewPost" asp-controller="Posts" asp-route-postId="@item.PostId" asp-route-postTitle="@item.Title" class="btn btn-primary mr-2"><i class="ion ion-md-create"></i>Read More</a>
                         </div>
                     </div>
                     <div class="card-body">
