--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/Edit.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ASP.NET_MVC_Forum.Models.Post.AddPostFormModel;
+﻿@model ASP.NET_MVC_Forum.Models.Post.EditPostFormModel;
 @{
     ViewData["Title"] = "Add";
 }
@@ -6,11 +6,12 @@
 <link rel="stylesheet" type="text/css" href="prism.css">
 
 <div class="container">
-    <form method="post" asp-controller="Posts" asp-action="Add">
+    <form method="post" asp-controller="Posts" asp-action="Edit">
         <div class="form-row">
-                <div class="col-7">
-                    <input type="text" class="form-control" asp-for="Title" placeholder="Title">
-                </div>
+            <div class="col-7">
+                <input type="text" class="form-control" asp-for="Title" placeholder="Title">
+                <input type="hidden" class="form-control" asp-for="PostId" placeholder="Title">
+            </div>
             <div class="col">
                 <select asp-for="CategoryId" class="form-control">
                     @foreach (var category in Model.Categories)
@@ -24,7 +25,7 @@
             <textarea id="mytextarea" required asp-for="HtmlContent" placeholder="Once upon a time..."></textarea>
         </div>
         <div class="text-center mt-3">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Save</button>
         </div>
         <div class="text-center mt-3">
             <span class="text-center text-danger " asp-validation-for="Title"></span>
