--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/Edit.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/Edit.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Add";
 }
 
-<link rel="stylesheet" type="text/css" href="prism.css">
+<link rel="stylesheet" type="text/css" href="~/css/prism.css">
 
 <div class="container">
     <form method="post" asp-controller="Posts" asp-action="Edit">
@@ -66,4 +66,4 @@
     });
 </script>
 
-<script src="prism.js"></script>
+<script src="~/js/prism.js"></script>
