implemented post deletion fixed a bug where posts cache for the home index page was generated on each page viewing

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
@@ -13,10 +13,10 @@
         <div class="col-md-12">
             <div class="card mb-3 mt-3">
                 <div class="card-footer d-flex flex-wrap justify-content-between align-items-center px-0 pt-0 pb-3">
-                    <div class="4 pt-3">
+                    <div class="ml-2 pt-3">
                         <h5 class="text-dark font-weight-bold">@Model.Title</h5>
                     </div>
-                    <div class="pt-3 text-center">
+                    <div class="mr-2 pt-3 text-center">
                         <a type="button" href='javascript:history.go(-1)' class="btn btn-secondary float-sm-right"><i class="ion ion-md-create"></i>Go Back</a>
                     </div>
                 </div>
