--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
@@ -2,6 +2,13 @@
 
 <link rel="stylesheet" href="~/css/postsAll.css" />
 
+@if (TempData.ContainsKey("ErrorMessage"))
+{
+    <div class="alert alert-warning" role="alert">
+        @TempData["ErrorMessage"]
+    </div>
+}
+
 @foreach (var item in Model)
 {
     <div class="container mt-100">
@@ -10,6 +17,32 @@
                 <div class="card mb-4 mt-4">
                     <div class="card-footer align-items-center px-0 pt-0 pb-3">
                         <div class="px-2 pt-3 text-center">
+
+
+
+                            @if (this.User.Identity.Name == item.UserIdentityUserUsername)
+                            {
+                                <button type="button" class="btn btn-danger m-1 float-left" data-toggle="modal" data-target="#exampleModalCenter-@item.PostId">
+                                    Delete
+                                </button>
+                                <div class="modal fade" id="exampleModalCenter-@item.PostId" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                    <div class="modal-dialog modal-dialog-centered" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLongTitle">Are you sure you want to delete this post ?</h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-danger" data-dismiss="modal">No</button>
+                                                <a asp-action="Delete" asp-controller="Posts" asp-route-postId="@item.PostId" type="button" class="btn btn-success">Yes</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            }
+
                             <a class="text-dark font-weight-bolder font-italic" asp-action="ViewPost" asp-controller="Posts" asp-route-postId="@item.PostId" asp-route-postTitle="@item.Title ">@item.Title</a>
 
                             @if (this.User.Identity.Name == item.UserIdentityUserUsername)
