added more complex logic for checking whether a post is deleted by returning a nullable bool fixed a bug where you could pass a null object to be saved by db context to be marked as deleted

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Shared/_PostsPreviewPartial.cshtml
@@ -33,7 +33,7 @@
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-danger" data-dismiss="modal">No</button>
-                                                <form asp-action="Delete" asp-controller="Posts" asp-route-postId="@item.PostId" method="post">
+                                                <form asp-action="Delete" asp-controller="Posts" asp-route-postId="@item.PostId" asp-route-postTitle="@item.Title" method="post">
                                                     <input type="submit" class="btn btn-success" value="Yes"/>
                                                 </form>
                                             </div>
