implemented jquery logic where when a user posts his comment - the comment then disappears from the input field
To-Do: show newly created comment after comment post at the top of the comment list along with all other comments with ajax

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
@@ -163,8 +163,11 @@
             dataType: "json",
             success: function (data) {
                 if (data.Status === 'OK') {
-                    window.location.href = data.Url
+
                 }
+            },
+            complete: function () {
+                $("input#comment").val('')
             }
         });
     });
