enabled automatic collapsing when a comment is posted

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
@@ -165,11 +165,11 @@
             headers: { 'X-CSRF-TOKEN': token },
             success: function (data) {
                 if (data.Status === 'OK') {
-
                 }
             },
             complete: function () {
-                $("input#comment").val('')
+                $("input#comment").val(''),
+                    $('.collapse').collapse('show')
             }
         });
     });
