--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
@@ -2,6 +2,7 @@
 @using System.Security.Claims;
 @{
     ViewData["Title"] = "View Post";
+    var userUsername = this.User.Identity.Name;
 }
 
 
@@ -146,8 +147,6 @@
 
 @section Scripts{
     <script>
-
-
         $("button#sendComment").click(function (e) {
             e.preventDefault();
             var token = $("#commentsForm [name=__RequestVerificationToken]").val();
@@ -163,15 +162,10 @@
             data: JSON.stringify(data),
             dataType: "json",
             headers: { 'X-CSRF-TOKEN': token },
-            success: function (data) {
-                if (data.Status === 'OK') {
-                }
-            },
-            complete: function () {
+            success: function (returnData) {
                 $("input#comment").val(''),
-                    document
-                $('.collapse').collapse('show')
-               
+                    $('.collapse').collapse('show')
+                $('<div class="d-flex flex-row align-items-center commented-user"><h5 class="mr-2">' + returnData.username + '</h5 ></div ><div class="comment-text-sm"><span>' + returnData.commentText + '</span></div>').prependTo('.commentsArray');
             }
         });
     });
@@ -185,14 +179,12 @@
                         for (var i = 0; i < comments.length; i++) {
                             var currentComment = (comments[i].content);
                             var currentCommentAuthor = comments[i].commentAuthor;
-
                             $('<div class="d-flex flex-row align-items-center commented-user"><h5 class="mr-2">' + currentCommentAuthor + '</h5 ></div ><div class="comment-text-sm"><span>' + currentComment + '</span></div>').appendTo('.commentsArray');
                         }
                     }
                 )
                 $(".servicedrop").addClass('fa-chevron-up').removeClass('fa-chevron-down');
             });
-
             $('#collapse-1').on('hidden.bs.collapse', function () {
                 $(".servicedrop").addClass('fa-chevron-down').removeClass('fa-chevron-up');
                 $("div.comment-text-sm").remove();
@@ -202,4 +194,3 @@
     </script>
 
 }
-
