--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Views/Posts/ViewPost.cshtml
@@ -128,7 +128,7 @@
                     </div>
                 }
                 <div class="collapsable-comment">
-                    <div class="d-flex flex-row justify-content-between align-items-center action-collapse p-2" data-toggle="collapse" aria-expanded="false" aria-controls="collapse-1" href="#collapse-1"><span>Comments</span><i class="fa fa-chevron-down servicedrop"></i></div>
+                    <div class="d-flex flex-row justify-content-between align-items-center action-collapse p-2" data-toggle="collapse" aria-expanded="false" aria-controls="collapse-1" href="#collapse-1"><span>Comments</span><i id="serviceDrop" class="fa fa-chevron-down servicedrop"></i></div>
                     <div id="collapse-1" class="collapse">
                         @*-------------COMMENT--------------*@
                         <div class="commented-section mt-2">
@@ -144,6 +144,7 @@
     </div>
 </div>
 
+@* I know this js is ugly but I know no JS or jQuery... yet*@
 
 @section Scripts{
     <script>
@@ -163,9 +164,12 @@
             dataType: "json",
             headers: { 'X-CSRF-TOKEN': token },
             success: function (returnData) {
+                var el = document.getElementById('serviceDrop');
                 $("input#comment").val(''),
                     $('.collapse').collapse('show')
-                $('<div class="d-flex flex-row align-items-center commented-user"><h5 class="mr-2">' + returnData.username + '</h5 ></div ><div class="comment-text-sm"><span>' + returnData.commentText + '</span></div>').prependTo('.commentsArray');
+                if (el.classList.contains('fa-chevron-up')) {
+                    $('<div class="d-flex flex-row align-items-center commented-user"><h5 class="mr-2">' + returnData.username + '</h5 ></div ><div class="comment-text-sm"><span>' + returnData.commentText + '</span></div>').prependTo('.commentsArray');
+                }
             }
         });
     });
